# cmock

./: README.md  cmock.h  mock_define.h
examples/: CMakeLists.txt  example.cpp  example_1.cpp  example_2.cpp  example_3.cpp  example_4.cpp
